# compiler

./: .gitignore  CMakeLists.txt  README.md  adhalkjs  after.ll  test.cminus  test.ll
.cache/clangd/index/: BasicBlock.cpp.45A5D609316B7F7D.idx  BasicBlock.h.E48A8072B95CB0AF.idx  Constant.cpp.70BF6BC83876BD36.idx  Constant.h.860BB76C15AAF48C.idx  Function.cpp.53E888E0A139CFD1.idx  Function.h.5388CBCB96BA1467.idx  GlobalVariable.cpp.C4ED511E59662E76.idx  Type.h.2073A69AFB417BA8.idx  (+30 more)
.obsidian/: appearance.json  workspace.json
Documentations/1-parser/: Basics.md  Flex-regular-expressions.md  README.md
Documentations/3-ir-gen/: README.md
Documentations/common/: LightIR.md  cminusf.md
Reports/1-parser/: README.md
Reports/2-ir-gen-warmup/: report.md
Reports/3-ir-gen/: report.md
Reports/4.1-ssa/: report.md
include/: ast.hpp  cminusf_builder.hpp
include/lightir/: Instruction.h
include/optimization/: GVN.h
src/: CMakeLists.txt
src/cminusfc/: cminusf_builder.cpp
src/common/: ast.cpp
src/optimization/: Dominators.cpp  GVN.cpp
src/parser/: lexical_analyzer.l  syntax_analyzer.y
tests/: CMakeLists.txt  test_ast.cpp
tests/2-ir-gen-warmup/: CMakeLists.txt
tests/2-ir-gen-warmup/calculator/: calc_ast.cpp  calc_builder.cpp
tests/2-ir-gen-warmup/stu_cpp/: assign_generator.cpp  fun_generator.cpp  if_generator.cpp  while_generator.cpp
tests/2-ir-gen-warmup/stu_ll/: assign.ll  fun.ll  fun_hand.ll  if.ll  if_hand.ll  while.ll  while_hand.ll
tests/2-ir-gen-warmup/ta_gcd/: gcd_array_generator.cpp
tests/3-ir-gen/: eval_result
tests/parser/: cleanup.sh
(+15 files in other folders)
